--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 body > * {
-  padding: 0 300px;
+  padding: 0 200px;
 }
 
 .header {
@@ -40,16 +40,22 @@ body > * {
 .webintro {
   display: flex;
   background-color: #1f2937;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  align-items: center;
+  gap: 50px;
 }
 
 .textcontent {
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .webintro img {
   width: 50%;
+  object-fit: contain;
 }
 #text {
   color: #e5e7eb;
@@ -59,4 +65,122 @@ body > * {
   color: #f9faf8;
   font-size: 48px;
   font-weight: bolder;
+}
+
+.button {
+  color: #f9faf8;
+  background-color: #3882f6;
+  padding: 8px 32px;
+  border: 0;
+  border-radius: 10px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+/* Random cards section */
+.cardtitle {
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1f2937;
+  text-align: center;
+  padding-top: 70px;
+}
+
+.randomcards {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+  padding-bottom: 70px;
+  padding-top: 70px;
+}
+/* make sure each individual card is centered
+and aligns correctly */
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+  width: 150px;
+  text-align: center;
+}
+
+.card > div {
+  color: lightslategray;
+}
+
+.card img {
+  width: 150px;
+  height: 150px;
+  border: #3882f6 solid;
+  border-width: 3px;
+  border-radius: 10%;
+}
+/* define the style of the quote section */
+.quoteblock {
+  background-color: #e5e7eb;
+  padding: 150px 300px;
+}
+.author {
+  text-align: right;
+}
+.quote {
+  color: #1f2937;
+  font-size: 36px;
+  font-weight: lighter;
+  font-style: italic;
+}
+/* setting the style of the author part */
+.author {
+  font-size: 26px;
+  font-weight: bold;
+}
+
+/* now starts the call to action */
+
+/* now starts the footer */
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1f2937;
+  color: #e5e7eb;
+  font-size: 16px;
+  padding: 32px;
+}
+
+.callaction {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 70px;
+}
+.callcontainer {
+  padding: 40px;
+  background-color: #3882f6;
+  border-radius: 10px;
+  display: flex;
+  gap: 70px;
+  align-items: center;
+}
+#toptext {
+  font-weight: bold;
+  font-size: 32px;
+  color: #f9faf8;
+}
+#bottomtext {
+  color: #e5e7eb;
+}
+#botsign {
+  color: #f9faf8;
+  background-color: #3882f6;
+  padding: 8px 32px;
+  border-style: none;
+  border: #f9faf8 solid;
+  border-radius: 10px;
+
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
 }
